划分了header, main, footer的区域

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
-  <script src="src/app.js"></script>
+<header>
+  <ul class="header-ul">
+    <li>Home</li>
+    <li>World</li>
+    <li>Technology</li>
+    <li>Design</li>
+    <li>Culture</li>
+    <li>Business</li>
+    <li>Politics</li>
+    <li>Opinion</li>
+    <li>Science</li>
+    <li>Health</li>
+  </ul>
+</header>
+<main>
+  <aside class = "aside-left">这里是边缘框</aside>
+  <div class = "main-content"> 这里是主要内容 </div>
+  <aside class = "aside-right">这里是边缘框</aside>
+</main>
+<footer> 这里是footer </footer>
+<script src="src/app.js"></script>
 </body>
 </html>
