完成了main-aside-left

--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
   </ul>
 </header>
 <main>
-  <aside class = "aside-left">这里是边缘框</aside>
+  <aside class = "aside-left">
+    <div class = "aside-left-about">
+      <h1>UNSW</h1>
+      <p> The University of New South Wales is an Australian public research university located in the Sydney suburb of Kensington.</p>
+    </div>
+    <div class = "aside-left-archives">
+      <h1>Facilities</h1>
+      <ul>
+        <li><a href=""> Art & Design</a> </li>
+        <li><a href="">Engineering</a> </li>
+        <li><a href=""> Built Environment</a> </li>
+        <li><a href=""> Business School</a> </li>
+        <li><a href=""> Law</a> </li>
+        <li><a href=""> Medicine </a> </li>
+        <li><a href=""> Science</a> </li>
+        <li><a href=""> Defence Force Academy</a> </li>
+        <li><a href=""> Arts and Social Sciences</a> </li>
+      </ul>
+    </div>
+  </aside>
   <div class = "main-content"> 这里是主要内容 </div>
   <aside class = "aside-right">这里是边缘框</aside>
 </main>
