--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
     </div>
   </aside>
   <div class = "main-content"> 这里是主要内容 </div>
-  <aside class = "aside-right">这里是边缘框</aside>
+  <aside class = "aside-right">
+    <form>
+      <div class="form-group">
+        <input type="email" class="form-control"  placeholder="Email Address">
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password">
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="rememberMeCheck">
+        <label class="form-check-label" for="rememberMeCheck">Remember Me</label>
+      </div>
+      <button class="sign-in">Sign in</button>
+    </form>
+  </aside>
 </main>
 <footer> 这里是footer </footer>
 <script src="src/app.js"></script>
