--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </form>
   </aside>
 </main>
-<footer> 这里是footer </footer>
+<footer>
+   <p> Advanced CSS homework built by Yue Zhang</p>
+   <p class="try-center"> <a href="" > Back to top </a> </p>
+</footer>
 <script src="src/app.js"></script>
 </body>
 </html>
