--- a/index.html
+++ b/index.html
@@ -46,16 +46,12 @@
   </aside>
   <div class = "main-content"> 这里是主要内容 </div>
   <aside class = "aside-right">
-    <form>
-      <div class="form-group">
-        <input type="email" class="form-control"  placeholder="Email Address">
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password">
-      </div>
+    <form class = "try-center">
+      <input type="email" class="form-control"  placeholder="Email Address">
+      <input type="password" class="form-control" placeholder="Password">
       <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="rememberMeCheck">
-        <label class="form-check-label" for="rememberMeCheck">Remember Me</label>
+        <input type="checkbox" id="rememberMeCheck">
+        <label for="rememberMeCheck">Remember Me</label>
       </div>
       <button class="sign-in">Sign in</button>
     </form>
@@ -63,7 +59,7 @@
 </main>
 <footer>
    <p> Advanced CSS homework built by Yue Zhang</p>
-   <p class="try-center"> <a href="" > Back to top </a> </p>
+   <p> <a href="" > Back to top </a> </p>
 </footer>
 <script src="src/app.js"></script>
 </body>
