--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       </ul>
     </div>
   </aside>
-  <div class = "main-content"> 这里是主要内容 </div>
+  <div class = "main-content">
+    <div class = "article1"> 文章1 </div>
+    <div class = "article2"> 文章2 </div>
+    <div class = "article3"> 文章3 </div>
+  </div>
   <aside class = "aside-right">
     <form class = "try-center">
       <input type="email" class="form-control"  placeholder="Email Address">
