--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Title</title>
+  <title>UNSW</title>
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
@@ -85,7 +85,7 @@
   </aside>
 </main>
 <footer>
-   <p> Advanced CSS homework built by Yue Zhang</p>
+   <p> Advanced CSS homework built by <a href="" > @Yue Zhang</a></p>
    <p> <a href="" > Back to top </a> </p>
 </footer>
 <script src="src/app.js"></script>
